# mundo

./: .cz.yaml  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum  package-lock.json  serverless.yml
adapter/: BUILD.bazel  main.go
adapter/cmd/: BUILD.bazel  root.go  start.go
adapter/lambda/: BUILD.bazel  main.go
adapter/restful/: BUILD.bazel  impl.go  wire.go  wire_gen.go
adapter/restful/cmds/: BUILD.bazel  add_word_to_book.go  cmds.go  create_book.go  explain.go  get_book.go  help.go  ping.go  whoami.go
app/domain/management/biz/: BUILD.bazel  impl.go  impl_test.go  wire.go
app/domain/management/repo/wordbook/mongodb/: BUILD.bazel  model.go  mongodb.go  mongodb_test.go
app/domain/query/biz/: BUILD.bazel  impl.go  impl_test.go
docs/: ddd.md
entity/domain/identity/agg/: BUILD.bazel  member.go
entity/domain/identity/model/: BUILD.bazel  profile.go  user.go
entity/domain/management/agg/: BUILD.bazel  book.go  book.tmpl
entity/domain/management/biz/: BUILD.bazel  interface.go  mock_interface.go
entity/domain/management/model/: BUILD.bazel  collection.go
entity/domain/management/repo/: BUILD.bazel  mock_wordbook.go  wordbook.go
entity/domain/query/model/: BUILD.bazel  prompt.go  word.go
entity/domain/query/model/templates/: explain.tmpl
pkg/adapterx/: BUILD.bazel
pkg/cmdx/: BUILD.bazel  cmdx.go
pkg/configx/: BUILD.bazel  configx.go  parse.go
pkg/contextx/: BUILD.bazel
pkg/linebotx/: BUILD.bazel  linebotx.go
pkg/logging/: BUILD.bazel
pkg/netx/: BUILD.bazel
pkg/openaix/: BUILD.bazel  client.go
pkg/response/: BUILD.bazel
pkg/storage/mongodbx/: BUILD.bazel  mongodbx.go
pkg/transports/httpx/: BUILD.bazel  server.go
