load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmds",
    srcs = [
        "cmds.go",
        "ping.go",
    ],
    importpath = "github.com/blackhorseya/mundo/adapter/restful/cmds",
    visibility = ["//visibility:public"],
    deps = [
        "//entity/domain/identity/agg",
        "//pkg/contextx",
        "@com_github_line_line_bot_sdk_go_v8//linebot/messaging_api",
    ],
)
