load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmds",
    srcs = [
        "cmds.go",
        "create_book.go",
        "explain.go",
        "get_book.go",
        "ping.go",
        "whoami.go",
    ],
    importpath = "github.com/blackhorseya/mundo/adapter/restful/cmds",
    visibility = ["//visibility:public"],
    deps = [
        "//entity/domain/identity/agg",
        "//entity/domain/management/biz",
        "//entity/domain/query/model",
        "//pkg/contextx",
        "//pkg/openaix",
        "@com_github_line_line_bot_sdk_go_v8//linebot/messaging_api",
    ],
)
