load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "biz",
    srcs = [
        "impl.go",
        "wire.go",
    ],
    importpath = "github.com/blackhorseya/mundo/app/domain/management/biz",
    visibility = ["//visibility:public"],
    deps = [
        "//app/domain/management/repo/wordbook/mongodb",
        "//entity/domain/identity/agg",
        "//entity/domain/management/agg",
        "//entity/domain/management/biz",
        "//entity/domain/management/repo",
        "//pkg/contextx",
        "@com_github_google_wire//:wire",
    ],
)

go_test(
    name = "biz_test",
    srcs = ["impl_test.go"],
    embed = [":biz"],
    deps = [
        "//entity/domain/identity/agg",
        "//entity/domain/management/agg",
        "//entity/domain/management/biz",
        "//entity/domain/management/repo",
        "//pkg/contextx",
        "@com_github_stretchr_testify//suite",
        "@org_uber_go_mock//gomock",
    ],
)
