load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "biz",
    srcs = ["impl.go"],
    importpath = "github.com/blackhorseya/mundo/app/domain/query/biz",
    visibility = ["//visibility:public"],
)

go_test(
    name = "biz_test",
    srcs = ["impl_test.go"],
    embed = [":biz"],
    deps = ["@com_github_stretchr_testify//suite"],
)
