load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "agg",
    srcs = ["book.go"],
    embedsrcs = ["book.tmpl"],
    importpath = "github.com/blackhorseya/mundo/entity/domain/management/agg",
    visibility = ["//visibility:public"],
    deps = [
        "//entity/domain/management/model",
        "@com_github_line_line_bot_sdk_go_v8//linebot/messaging_api",
    ],
)
