load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "biz",
    srcs = [
        "interface.go",
        "mock_interface.go",
    ],
    importpath = "github.com/blackhorseya/mundo/entity/domain/management/biz",
    visibility = ["//visibility:public"],
    deps = [
        "//entity/domain/identity/agg",
        "//entity/domain/management/agg",
        "//pkg/contextx",
        "@org_uber_go_mock//gomock",
    ],
)
